# micro-videos-python

./: .flake8  .pdm-python  Dockerfile  README.md  db.sqlite3  docker-compose.override.yaml  docker-compose.yaml  manage.py  pdm.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflow/: main.yml
.github/workflows/: main.yml
aulas/: README.md
src/: category.py  test_category.py
src/core/category/application/: category_repository.py  create_category.py
src/core/category/application/use_cases/: create_category.py  delete_category.py  get_category.py  list_category.py  update_category.py
src/core/category/domain/: category.py  category_repository.py
src/core/category/infra/: in_memory_category.py
src/core/category/test/application/: test_create_category.py
src/core/category/test/domain/: test_category.py
src/core/genre/application/: genre_repository.py
src/core/genre/domain/: genre.py
src/core/genre/infra/: in_memory_genre.py
src/django_project/: asgi.py  settings.py  urls.py
src/django_project/category_app/: admin.py  apps.py  repository.py  serializers.py  views.py
src/django_project/category_app/migrations/: 0001_initial.py
src/django_project/category_app/tests/: test_category_api.py  test_category_repository.py  test_category_view.py
src/django_project/genre_app/: models.py  repository.py  serializers.py  views.py
src/django_project/genre_app/migrations/: 0001_initial.py
src/django_project/genre_app/test/: test_genre_repository.py  test_genre_views.py
src/tests_e2e/: test_user_can_create_and_edit_category.py
(+29 files in other folders)
